# camera_imu_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: I_T_C.txt  I_T_C_2022-01-28-15-11-20-cincalib.txt  I_T_C_2022-01-28-15-11-20-kalibr.txt  I_T_C_2022-01-28-15-15-06-cincalib.txt  I_T_C_2022-01-28-15-15-06-kalibr.txt  I_T_C_2022-01-28-15-20-21-cincalib.txt  I_T_C_2022-01-28-15-20-21-kalibr.txt  I_T_C_2022-01-28-15-30-47-cincalib.txt  I_T_C_2022-01-28-15-30-47-kalibr.txt  I_T_C_cincalib.txt  I_T_C_final.txt  I_T_C_init.txt  I_T_C_init_.txt  I_T_C_kalibr.txt  analyzeITC.m  analyzeITC_kalibr.m  analyze_camera_ts.m  analyze_imu_ts.m  board_detection.csv  camerapose_trajectory.csv  camerapose_trajectory_wrefinement.csv  camimu_calib_extrinsic.csv  camimucalib_bias.csv  camimucalib_trajectory.csv  camimucalib_velocity.csv  compareRefinementVsNoRefinement.m  compare_trajectories.m  compare_with_kalibr.asv  compare_with_kalibr.m  gains1.csv  gains2.csv  image_ts_data.csv  imu_test_data.csv  plot_bias_camimu.m  plot_calib_camimu.m  plot_gains.m  plot_repErr.m  plot_trajectory_cam.m  plot_trajectory_camimu.asv  plot_trajectory_camimu.m  (+11 more)
launch/: camimucalib_vectornav_pylon.launch  camimucalib_vectornav_pylon_verification.launch
src/: ros_camimucalib_test.cpp
src/core/: camimucalibManager.cpp  camimucalibManager.h  camimucalibManagerOptions.h
src/init/: InertialInitializer.cpp  InertialInitializer.h
src/relpose/: relativePose.h
src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
src/track/: cameraPoseTracking.cpp  cameraPoseTracking.h  cameraTracking.cpp  cameraTracking.h
src/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
src/update/: UpdaterCameraTracking.cpp  UpdaterCameraTracking.h  UpdaterOptions.h
src/utils/: color.h  eigen_utils.h  math_utils.h  parse_ros.h  quat_ops.h
